Gain: $ -0.03 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2
Gain: $ -0.03 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_RV
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_IR5
Gain: $ -0.27 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_TR
Gain: $ -0.09 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_AV
Gain: $ -0.01 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_VI
Gain: $ -0.17 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_AL
Gain: $ -0.13 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_LI
Gain: $ -0.47 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_QP
Gain: $ -0.02 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_HM
Gain: $ -0.03 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_SS
Gain: $ -1.26 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_QL
Gain: $ -0.03 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_DB6
Gain: $ -0.09 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_TR_IR5
Gain: $ -0.37 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_TR_QP
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_QP_IR5
Gain: $ -0.27 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_RV_TR
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_RV_TR_DB
Gain: $ -0.09 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_RV_AV
Gain: $ -0.17 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_RV_AL
Gain: $ -0.47 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_RV_QP
Gain: $ -0.26 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_HM_TR
Gain: $ -1.96 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_HM_AV
Gain: $ -0.46 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB2_CS2_HM_QP
Gain: $ -0.03 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_RV
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_IR5
Gain: $ -0.27 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_TR
Gain: $ -0.09 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_AV
Gain: $ -0.01 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_VI
Gain: $ -0.17 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_AL
Gain: $ -0.13 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_LI
Gain: $ -0.47 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_QP
Gain: $ -0.02 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_HM
Gain: $ -1.96 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_SS
Gain: $ -0.03 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_QL
Gain: $ -0.11 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_DB6
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_TR_IR5
Gain: $ -0.37 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_TR_QP
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_QP_IR5
Gain: $ -0.27 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_RV_TR
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_RV_TR_DB
Gain: $ -0.09 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_RV_AV
Gain: $ -0.17 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_RV_AL
Gain: $ -0.47 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_RV_QP
Gain: $ -0.26 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_HM_TR
Gain: $ -0.13 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_HM_AV
Gain: $ -0.46 Win %: 0 in 1 days with algo TB5_OO_QM_OB3_OS3_CB1_CS1_HM_QP
Gain: $ -1.59 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_RV
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_IR5
Gain: $ -1.5 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_TR
Gain: $ 0.07 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_AV
Gain: $ -0.22 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_VI
Gain: $ -2.85 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_AL
Gain: $ -1.12 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_LI
Gain: $ -2.72 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_QP
Gain: $ -1.63 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_HM
Gain: $ -1.59 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_SS
Gain: $ -0.34 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_QL
Gain: $ -1.59 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_DB6
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_TR_IR5
Gain: $ -1.97 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_TR_QP
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_QP_IR5
Gain: $ -1.5 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_RV_TR
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_RV_TR_DB
Gain: $ -1.97 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_RV_AV
Gain: $ -0.75 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_RV_AL
Gain: $ -2.72 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_RV_QP
Gain: $ -1.54 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_HM_TR
Gain: $ -0.23 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_HM_AV
Gain: $ -2.76 Win %: 0 in 1 days with algo TB5_OO_QM_OB2_OS2_CB2_CS2_HM_QP
Gain: $ -0.26 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_RV
Gain: $ -0.14 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_IR5
Gain: $ -0.26 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_TR
Gain: $ -0.08 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_AV
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_VI
Gain: $ -0.08 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_AL
Gain: $ -0.07 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_LI
Gain: $ -0.05 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_QP
Gain: $ -0.3 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_HM
Gain: $ -0.26 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_SS
Gain: $ -0.26 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_QL
Gain: $ -0.26 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_DB6
Gain: $ -0.14 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_TR_IR5
Gain: $ -0.05 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_TR_QP
Gain: $ -0.04 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_QP_IR5
Gain: $ -0.26 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_RV_TR
Gain: $ 0 Win %: 100.00 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_RV_TR_DB
Gain: $ -0.08 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_RV_AV
Gain: $ -0.08 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_RV_AL
Gain: $ -0.05 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_RV_QP
Gain: $ -0.3 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_HM_TR
Gain: $ -0.12 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_HM_AV
Gain: $ -0.05 Win %: 0 in 1 days with algo TB5_OC_QM_OB4_OS4_CB5_CS5_HM_QP
