ADBE Gain: $ 17.55 Win %: 100.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5
ADBE Gain: $ -3.64 Win %: 20.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_TR_QP_DB15
ADBE Gain: $ 2.78 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV_TR_DB15
ADBE Gain: $ -9.28 Win %: 40.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AV_DB15
ADBE Gain: $ -3.64 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AL_DB15
ADBE Gain: $ -12.1 Win %: 40.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV_QP_DB15
ADBE Gain: $ 1.84 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_HM_TR_DB15
ADBE Gain: $ -6.65 Win %: 40.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AV_DB15
ADBE Gain: $ 2.23 Win %: 40.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_HM_QP_DB15
ADBE Gain: $ 0.41 Win %: 40.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QL_DB15
ADBE Gain: $ -1.35 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QP_DB15
ADBE Gain: $ 11.21 Win %: 100.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_TR_IR4
ADBE Gain: $ -0.78 Win %: 40.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_TR_QP
ADBE Gain: $ 11.07 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_QP_IR4
ADBE Gain: $ -0.7 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV_TR
ADBE Gain: $ 14.37 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AV
ADBE Gain: $ 7.44 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AL
ADBE Gain: $ -18.35 Win %: 40.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV_QP
ADBE Gain: $ 15.97 Win %: 100.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_HM_TR
ADBE Gain: $ 2.26 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AV
ADBE Gain: $ 4.61 Win %: 40.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_HM_QP
ADBE Gain: $ 12.15 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QL
ADBE Gain: $ 4.16 Win %: 100.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QP
ADBE Gain: $ -26.15 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_AO_AC
ADBE Gain: $ 3.74 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_QP_PM
ADBE Gain: $ -0.96 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV
ADBE Gain: $ 14.3 Win %: 100.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_IR4
ADBE Gain: $ 15.1 Win %: 100.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_TR
ADBE Gain: $ 16.04 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_AV
ADBE Gain: $ 12.43 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_AL
ADBE Gain: $ 3.03 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_VI
ADBE Gain: $ 8.22 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_LI
ADBE Gain: $ 8.55 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_QP
ADBE Gain: $ 17.44 Win %: 100.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_HM
ADBE Gain: $ 15.95 Win %: 100.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_SS
ADBE Gain: $ 17.55 Win %: 100.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_QL
ADBE Gain: $ 6.38 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_DB15
ADBE Gain: $ 14.28 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_AO
ADBE Gain: $ 6.94 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_AC
ADBE Gain: $ 12.15 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_IT
ADBE Gain: $ -8.01 Win %: 20.00 in 5 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_PM
ADBE Gain: $ -3.64 Win %: 20.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP_DB15
ADBE Gain: $ 2.78 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR_DB15
ADBE Gain: $ -9.28 Win %: 40.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV_DB15
ADBE Gain: $ -3.64 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL_DB15
ADBE Gain: $ -12.1 Win %: 40.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP_DB15
ADBE Gain: $ 1.84 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR_DB15
ADBE Gain: $ -6.65 Win %: 40.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV_DB15
ADBE Gain: $ 2.23 Win %: 40.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP_DB15
ADBE Gain: $ 0.41 Win %: 40.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL_DB15
ADBE Gain: $ -1.35 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP_DB15
ADBE Gain: $ 11.21 Win %: 100.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR_IR4
ADBE Gain: $ -0.78 Win %: 40.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP
ADBE Gain: $ 11.07 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QP_IR4
ADBE Gain: $ -0.7 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR
ADBE Gain: $ 14.37 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV
ADBE Gain: $ 7.44 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL
ADBE Gain: $ -18.35 Win %: 40.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP
ADBE Gain: $ 15.97 Win %: 100.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR
ADBE Gain: $ 2.26 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV
ADBE Gain: $ 4.61 Win %: 40.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP
ADBE Gain: $ 12.15 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL
ADBE Gain: $ 4.16 Win %: 100.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP
ADBE Gain: $ -26.15 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AO_AC
ADBE Gain: $ 3.74 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QP_PM
ADBE Gain: $ -0.96 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV
ADBE Gain: $ 14.3 Win %: 100.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IR4
ADBE Gain: $ 15.1 Win %: 100.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR
ADBE Gain: $ 16.04 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AV
ADBE Gain: $ 12.43 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AL
ADBE Gain: $ 3.03 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_VI
ADBE Gain: $ 8.22 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_LI
ADBE Gain: $ 8.55 Win %: 60.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QP
ADBE Gain: $ 17.44 Win %: 100.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM
ADBE Gain: $ 15.95 Win %: 100.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_SS
ADBE Gain: $ 17.55 Win %: 100.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QL
ADBE Gain: $ 6.38 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_DB15
ADBE Gain: $ 14.28 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AO
ADBE Gain: $ 6.94 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AC
ADBE Gain: $ 12.15 Win %: 80.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT
ADBE Gain: $ -8.01 Win %: 20.00 in 5 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_PM
ADBE Gain: $ 6.48 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_TR_QP_DB15
ADBE Gain: $ 8.13 Win %: 100.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_RV_TR_DB15
ADBE Gain: $ -1.86 Win %: 60.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_RV_AV_DB15
ADBE Gain: $ -2.96 Win %: 40.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_RV_AL_DB15
ADBE Gain: $ 4.81 Win %: 60.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_RV_QP_DB15
ADBE Gain: $ 4.73 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_HM_TR_DB15
ADBE Gain: $ 4.19 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_HM_AV_DB15
ADBE Gain: $ 7.65 Win %: 60.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_HM_QP_DB15
ADBE Gain: $ 1.28 Win %: 60.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_IT_QL_DB15
ADBE Gain: $ 4.78 Win %: 100.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_IT_QP_DB15
ADBE Gain: $ 0.92 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_TR_IR4
ADBE Gain: $ 15.29 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_TR_QP
ADBE Gain: $ -11.9 Win %: 20.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_QP_IR4
ADBE Gain: $ 6.15 Win %: 60.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_RV_TR
ADBE Gain: $ 1.3 Win %: 60.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_RV_AV
ADBE Gain: $ -6.2 Win %: 60.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_RV_AL
ADBE Gain: $ -2.78 Win %: 40.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_RV_QP
ADBE Gain: $ 7.21 Win %: 60.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_HM_TR
ADBE Gain: $ 8.13 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_HM_AV
ADBE Gain: $ 10.69 Win %: 60.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_HM_QP
ADBE Gain: $ 10.7 Win %: 100.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_IT_QL
ADBE Gain: $ 3.33 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_IT_QP
ADBE Gain: $ 15.19 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_AO_AC
ADBE Gain: $ 17.47 Win %: 100.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_QP_PM
ADBE Gain: $ 3.67 Win %: 60.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_RV
ADBE Gain: $ 1.74 Win %: 60.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_IR4
ADBE Gain: $ 11.22 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_TR
ADBE Gain: $ 10.03 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_AV
ADBE Gain: $ 10.5 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_AL
ADBE Gain: $ 8.84 Win %: 60.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_VI
ADBE Gain: $ 10.92 Win %: 60.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_LI
ADBE Gain: $ 16.29 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_QP
ADBE Gain: $ 13.29 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_HM
ADBE Gain: $ 15.19 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_SS
ADBE Gain: $ 12.72 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_QL
ADBE Gain: $ 9.35 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_DB15
ADBE Gain: $ 15.19 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_AO
ADBE Gain: $ 15.19 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_AC
ADBE Gain: $ 10.7 Win %: 100.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_IT
ADBE Gain: $ 10.96 Win %: 80.00 in 5 days with algo TB2_LO_QM_OB5_OS5_CB5_CS5_PM
ADBE Gain: $ -11.77 Win %: 20.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_TR_QP_DB8
ADBE Gain: $ -24.05 Win %: 20.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_RV_TR_DB8
ADBE Gain: $ -8.8 Win %: 60.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AV_DB8
ADBE Gain: $ -13.09 Win %: 60.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AL_DB8
ADBE Gain: $ -16.97 Win %: 40.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_RV_QP_DB8
ADBE Gain: $ -0.36 Win %: 60.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_HM_TR_DB8
ADBE Gain: $ -12.72 Win %: 40.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_HM_AV_DB8
ADBE Gain: $ -8.4 Win %: 40.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_HM_QP_DB8
ADBE Gain: $ -12.7 Win %: 40.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QL_DB8
ADBE Gain: $ -3.29 Win %: 80.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QP_DB8
ADBE Gain: $ 15.1 Win %: 100.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_TR_IR2
ADBE Gain: $ 5.14 Win %: 60.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_TR_QP
ADBE Gain: $ 9.84 Win %: 100.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_QP_IR2
ADBE Gain: $ -7.03 Win %: 60.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_RV_TR
ADBE Gain: $ 6.68 Win %: 60.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AV
ADBE Gain: $ 2.39 Win %: 60.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_RV_AL
ADBE Gain: $ -11.83 Win %: 60.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_RV_QP
ADBE Gain: $ 12.51 Win %: 80.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_HM_TR
ADBE Gain: $ -6.05 Win %: 40.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_HM_AV
ADBE Gain: $ 3.15 Win %: 80.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_HM_QP
ADBE Gain: $ 10.81 Win %: 100.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QL
ADBE Gain: $ 5.41 Win %: 100.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_IT_QP
ADBE Gain: $ -24.98 Win %: 40.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_AO_AC
ADBE Gain: $ 4.89 Win %: 60.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_QP_PM
ADBE Gain: $ -6.3 Win %: 60.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_RV
ADBE Gain: $ 15.1 Win %: 100.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_IR2
ADBE Gain: $ 15.1 Win %: 100.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_TR
ADBE Gain: $ 8.96 Win %: 80.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_AV
ADBE Gain: $ 15.73 Win %: 100.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_AL
ADBE Gain: $ 4.09 Win %: 60.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_VI
ADBE Gain: $ 5.37 Win %: 60.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_LI
ADBE Gain: $ 9.84 Win %: 100.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_QP
ADBE Gain: $ 1.62 Win %: 60.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_HM
ADBE Gain: $ 13.53 Win %: 100.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_SS
ADBE Gain: $ 15.1 Win %: 100.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_QL
ADBE Gain: $ -8.86 Win %: 40.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_DB8
ADBE Gain: $ 8.42 Win %: 60.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_AO
ADBE Gain: $ -23.04 Win %: 40.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_AC
ADBE Gain: $ 10.81 Win %: 100.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_IT
ADBE Gain: $ 4.57 Win %: 40.00 in 5 days with algo TB4_HL_HS_QM_OB2_OS2_CB5_CS5_PM
