ADBE Gain: $ -49.28 Win %: 14.00 in 7 days with algo TB4_HL_QM_OB2_OS2_CB2_CS2_TS
ADBE Gain: $ 27.39 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5
ADBE Gain: $ 0.07 Win %: 37.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_TR_QP_DB15
ADBE Gain: $ 17.78 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV_TR_DB15
ADBE Gain: $ 11.21 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AV_DB15
ADBE Gain: $ 18.52 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AL_DB15
ADBE Gain: $ -2.73 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV_QP_DB15
ADBE Gain: $ 12.28 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_HM_TR_DB15
ADBE Gain: $ 13.97 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AV_DB15
ADBE Gain: $ 11.44 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_HM_QP_DB15
ADBE Gain: $ 19.56 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QL_DB15
ADBE Gain: $ 6.48 Win %: 37.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QP_DB15
ADBE Gain: $ 18.2 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_TR_IR4
ADBE Gain: $ 11.42 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_TR_TS
ADBE Gain: $ -11.55 Win %: 37.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_TR_QP
ADBE Gain: $ 5.07 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_QP_IR4
ADBE Gain: $ 5.14 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV_TR
ADBE Gain: $ 31.17 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AV
ADBE Gain: $ 30.86 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV_AL
ADBE Gain: $ -23.35 Win %: 37.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV_QP
ADBE Gain: $ 19.76 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_HM_TR
ADBE Gain: $ 7.45 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AV
ADBE Gain: $ 12.04 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_HM_AL
ADBE Gain: $ -15.61 Win %: 25.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_HM_QP
ADBE Gain: $ 19.05 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QL
ADBE Gain: $ 1.65 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_IT_QP
ADBE Gain: $ 16.84 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_IT_TS
ADBE Gain: $ -78.65 Win %: 37.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_AO_AC
ADBE Gain: $ 9.64 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_QP_PM
ADBE Gain: $ 17.1 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_AV_TS
ADBE Gain: $ 24.39 Win %: 87.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_AL_TS
ADBE Gain: $ 10.71 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_RV
ADBE Gain: $ 25.63 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_IR4
ADBE Gain: $ 20.6 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_TR
ADBE Gain: $ 30.82 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_AV
ADBE Gain: $ 36.73 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_AL
ADBE Gain: $ 18.58 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_VI
ADBE Gain: $ 1.75 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_LI
ADBE Gain: $ 1.65 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_QP
ADBE Gain: $ 10.98 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_HM
ADBE Gain: $ 22.44 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_SS
ADBE Gain: $ 22.8 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_QL
ADBE Gain: $ 24.72 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_DB15
ADBE Gain: $ 24.55 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_AO
ADBE Gain: $ -29.74 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_AC
ADBE Gain: $ 22.95 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_IT
ADBE Gain: $ 16.06 Win %: 87.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_PM
ADBE Gain: $ 18.49 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB2_OS2_CB5_CS5_TS
ADBE Gain: $ 0.07 Win %: 37.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP_DB15
ADBE Gain: $ 17.78 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR_DB15
ADBE Gain: $ 11.21 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV_DB15
ADBE Gain: $ 21.33 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL_DB15
ADBE Gain: $ -2.73 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP_DB15
ADBE Gain: $ 12.28 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR_DB15
ADBE Gain: $ 13.03 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV_DB15
ADBE Gain: $ 11.44 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP_DB15
ADBE Gain: $ 14.31 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL_DB15
ADBE Gain: $ 6.48 Win %: 37.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP_DB15
ADBE Gain: $ 6.41 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR_IR4
ADBE Gain: $ 11.42 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR_TS
ADBE Gain: $ -11.55 Win %: 37.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR_QP
ADBE Gain: $ 5.07 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QP_IR4
ADBE Gain: $ 5.14 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_TR
ADBE Gain: $ 31.17 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AV
ADBE Gain: $ 30.86 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_AL
ADBE Gain: $ -23.35 Win %: 37.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV_QP
ADBE Gain: $ 19.76 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_TR
ADBE Gain: $ -8.07 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AV
ADBE Gain: $ 12.04 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_AL
ADBE Gain: $ -15.61 Win %: 25.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM_QP
ADBE Gain: $ 19.05 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QL
ADBE Gain: $ -3.63 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_QP
ADBE Gain: $ 11.09 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT_TS
ADBE Gain: $ -35.31 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AO_AC
ADBE Gain: $ 11.24 Win %: 87.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QP_PM
ADBE Gain: $ 11.35 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AV_TS
ADBE Gain: $ 18.64 Win %: 87.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AL_TS
ADBE Gain: $ -4.11 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_RV
ADBE Gain: $ 10.81 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IR4
ADBE Gain: $ 4.13 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TR
ADBE Gain: $ 8.92 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AV
ADBE Gain: $ 21.7 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AL
ADBE Gain: $ 7.17 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_VI
ADBE Gain: $ 13.99 Win %: 87.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_LI
ADBE Gain: $ -3.63 Win %: 50.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QP
ADBE Gain: $ 19.22 Win %: 87.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_HM
ADBE Gain: $ 7.62 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_SS
ADBE Gain: $ 7.98 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_QL
ADBE Gain: $ 13.31 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_DB15
ADBE Gain: $ 9.72 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AO
ADBE Gain: $ 1.93 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_AC
ADBE Gain: $ 8.13 Win %: 62.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_IT
ADBE Gain: $ 3.14 Win %: 87.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_PM
ADBE Gain: $ 12.74 Win %: 75.00 in 8 days with algo TB2_HL_LO_QM_OB1_OS1_CB5_CS5_TS
ADBE Gain: $ -22.67 Win %: 25.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_TR_QP_DB10
ADBE Gain: $ -18.28 Win %: 50.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_RV_TR_DB10
ADBE Gain: $ 5.35 Win %: 75.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_RV_AV_DB10
ADBE Gain: $ -9.19 Win %: 50.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_RV_AL_DB10
ADBE Gain: $ -4.39 Win %: 62.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_RV_QP_DB10
ADBE Gain: $ -5.35 Win %: 62.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_HM_TR_DB10
ADBE Gain: $ 1.52 Win %: 75.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_HM_AV_DB10
ADBE Gain: $ -9.32 Win %: 50.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_HM_QP_DB10
ADBE Gain: $ -15.69 Win %: 50.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_IT_QL_DB10
ADBE Gain: $ -11.58 Win %: 50.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_IT_QP_DB10
ADBE Gain: $ -2.64 Win %: 50.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_TR_IR3
ADBE Gain: $ 15.6 Win %: 87.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_TR_TS
ADBE Gain: $ -2.48 Win %: 62.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_TR_QP
ADBE Gain: $ 10.66 Win %: 87.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_QP_IR3
ADBE Gain: $ 4.11 Win %: 62.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_RV_TR
ADBE Gain: $ 16.63 Win %: 75.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_RV_AV
ADBE Gain: $ 11.52 Win %: 50.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_RV_AL
ADBE Gain: $ 2.93 Win %: 75.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_RV_QP
ADBE Gain: $ 14.05 Win %: 75.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_HM_TR
ADBE Gain: $ 14.83 Win %: 87.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_HM_AV
ADBE Gain: $ 1.43 Win %: 37.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_HM_AL
ADBE Gain: $ -8.82 Win %: 62.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_HM_QP
ADBE Gain: $ 8.2 Win %: 75.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_IT_QL
ADBE Gain: $ -2.33 Win %: 62.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_IT_QP
ADBE Gain: $ 18.73 Win %: 87.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_IT_TS
ADBE Gain: $ 15.98 Win %: 75.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_AO_AC
ADBE Gain: $ -1.82 Win %: 50.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_QP_PM
ADBE Gain: $ 12.08 Win %: 75.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_AV_TS
ADBE Gain: $ 14.37 Win %: 62.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_AL_TS
ADBE Gain: $ 15.45 Win %: 75.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_RV
ADBE Gain: $ 4.26 Win %: 62.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_IR3
ADBE Gain: $ 8.6 Win %: 75.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_TR
ADBE Gain: $ 16.63 Win %: 75.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_AV
ADBE Gain: $ 12.64 Win %: 50.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_AL
ADBE Gain: $ -3.51 Win %: 50.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_VI
ADBE Gain: $ 16.34 Win %: 75.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_LI
ADBE Gain: $ -2.33 Win %: 62.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_QP
ADBE Gain: $ 6.63 Win %: 62.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_HM
ADBE Gain: $ 11.31 Win %: 75.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_SS
ADBE Gain: $ 5.48 Win %: 62.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_QL
ADBE Gain: $ -5.12 Win %: 62.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_DB10
ADBE Gain: $ 15.98 Win %: 75.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_AO
ADBE Gain: $ 15.98 Win %: 75.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_AC
ADBE Gain: $ 17.36 Win %: 87.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_IT
ADBE Gain: $ 1.01 Win %: 62.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_PM
ADBE Gain: $ 21.51 Win %: 87.00 in 8 days with algo TB3_OO_QM_OB3_OS3_CB5_CS5_TS
ADBE Gain: $ -13.88 Win %: 37.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_TR_QP_DB8
ADBE Gain: $ -6.22 Win %: 50.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_RV_TR_DB8
ADBE Gain: $ -5.24 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_RV_AV_DB8
ADBE Gain: $ -0.95 Win %: 50.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_RV_AL_DB8
ADBE Gain: $ -5.83 Win %: 50.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_RV_QP_DB8
ADBE Gain: $ -12.47 Win %: 50.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_HM_TR_DB8
ADBE Gain: $ -8.8 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_HM_AV_DB8
ADBE Gain: $ -5.93 Win %: 50.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_HM_QP_DB8
ADBE Gain: $ 5.0 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_IT_QL_DB8
ADBE Gain: $ 4.13 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_IT_QP_DB8
ADBE Gain: $ -1.19 Win %: 50.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_TR_IR2
ADBE Gain: $ 1.46 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_TR_TS
ADBE Gain: $ -8.45 Win %: 37.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_TR_QP
ADBE Gain: $ -1.23 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_QP_IR2
ADBE Gain: $ -4.77 Win %: 50.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_RV_TR
ADBE Gain: $ 0.2 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_RV_AV
ADBE Gain: $ 3.05 Win %: 50.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_RV_AL
ADBE Gain: $ -6.39 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_RV_QP
ADBE Gain: $ -12.73 Win %: 50.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_HM_TR
ADBE Gain: $ -6.98 Win %: 50.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_HM_AV
ADBE Gain: $ 6.74 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_HM_AL
ADBE Gain: $ -12.12 Win %: 50.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_HM_QP
ADBE Gain: $ 3.19 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_IT_QL
ADBE Gain: $ -0.12 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_IT_QP
ADBE Gain: $ 9.07 Win %: 75.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_IT_TS
ADBE Gain: $ -205.78 Win %: 25.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_AO_AC
ADBE Gain: $ 3.83 Win %: 75.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_QP_PM
ADBE Gain: $ -1.68 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_AV_TS
ADBE Gain: $ 5.69 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_AL_TS
ADBE Gain: $ 8.58 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_RV
ADBE Gain: $ 16.24 Win %: 75.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_IR2
ADBE Gain: $ -1.26 Win %: 50.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_TR
ADBE Gain: $ 0.2 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_AV
ADBE Gain: $ 8.62 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_AL
ADBE Gain: $ 1.05 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_VI
ADBE Gain: $ 5.4 Win %: 50.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_LI
ADBE Gain: $ -0.12 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_QP
ADBE Gain: $ -0.75 Win %: 50.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_HM
ADBE Gain: $ 5.78 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_SS
ADBE Gain: $ 6.48 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_QL
ADBE Gain: $ 17.29 Win %: 87.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_DB8
ADBE Gain: $ 19.42 Win %: 75.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_AO
ADBE Gain: $ -8.87 Win %: 37.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_AC
ADBE Gain: $ 10.74 Win %: 75.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_IT
ADBE Gain: $ 5.22 Win %: 62.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_PM
ADBE Gain: $ 10.51 Win %: 75.00 in 8 days with algo TB4_HL_LO_QM_OB2_OS2_CB3_CS3_TS
ADBE Gain: $ -50.88 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_TR_QP_DB8
ADBE Gain: $ -53.71 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV_TR_DB8
ADBE Gain: $ -11.87 Win %: 50.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV_AV_DB8
ADBE Gain: $ -37.78 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV_AL_DB8
ADBE Gain: $ -190.51 Win %: 12.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV_QP_DB8
ADBE Gain: $ -56.07 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_HM_TR_DB8
ADBE Gain: $ -16.17 Win %: 50.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_HM_AV_DB8
ADBE Gain: $ -192.49 Win %: 12.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_HM_QP_DB8
ADBE Gain: $ -28.84 Win %: 12.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_IT_QL_DB8
ADBE Gain: $ -190.51 Win %: 12.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_IT_QP_DB8
ADBE Gain: $ -67.49 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_TR_IR2
ADBE Gain: $ -38.74 Win %: 50.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_TR_TS
ADBE Gain: $ -62.36 Win %: 37.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_TR_QP
ADBE Gain: $ -183.64 Win %: 12.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_QP_IR2
ADBE Gain: $ -60.55 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV_TR
ADBE Gain: $ 4.09 Win %: 75.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV_AV
ADBE Gain: $ -33.66 Win %: 37.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV_AL
ADBE Gain: $ -189.82 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV_QP
ADBE Gain: $ -62.91 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_HM_TR
ADBE Gain: $ -6.03 Win %: 62.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_HM_AV
ADBE Gain: $ -36.16 Win %: 37.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_HM_AL
ADBE Gain: $ -195.05 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_HM_QP
ADBE Gain: $ -20.3 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_IT_QL
ADBE Gain: $ -189.82 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_IT_QP
ADBE Gain: $ -169.81 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_IT_TS
ADBE Gain: $ -14702.4 Win %: 12.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_AO_AC
ADBE Gain: $ -89.17 Win %: 12.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_QP_PM
ADBE Gain: $ 7.36 Win %: 87.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_AV_TS
ADBE Gain: $ -36.13 Win %: 37.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_AL_TS
ADBE Gain: $ -164.72 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_RV
ADBE Gain: $ -158.58 Win %: 12.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_IR2
ADBE Gain: $ -60.55 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_TR
ADBE Gain: $ 4.09 Win %: 75.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_AV
ADBE Gain: $ -33.66 Win %: 37.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_AL
ADBE Gain: $ -19.41 Win %: 50.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_VI
ADBE Gain: $ -88.52 Win %: 12.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_LI
ADBE Gain: $ -189.82 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_QP
ADBE Gain: $ -170.32 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_HM
ADBE Gain: $ -136.27 Win %: 37.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_SS
ADBE Gain: $ -20.53 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_QL
ADBE Gain: $ -170.06 Win %: 12.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_DB8
ADBE Gain: $ -169.89 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_AO
ADBE Gain: $ -14591.7 Win %: 12.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_AC
ADBE Gain: $ -167.86 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_IT
ADBE Gain: $ -89.77 Win %: 12.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_PM
ADBE Gain: $ -165.72 Win %: 25.00 in 8 days with algo TB4_PL_QM_OB1_OS1_CB2_CS2_TS
